<resources>
    <string name="app_name">humanapp</string>
    <string name="name">DEMO APP</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="olvidopass">¿Olvidaste tu Contraseña?</string>
    <string name="nocuenta">¿No tienes cuenta aún? - Registro</string>

    <string name="nombre">Nombre</string>
    <string name="edad">Edad</string>
    <string name="registro">Registro</string>
    <string name="yatienecuanta">¿Ya tienes cuenta? - Login</string>


</resources>
